[package]
name = "gluon_bindings"
version = "1.0.0"
edition = "2024"
authors = ["The Gluon3 Contributors"]

description = "The Gluon3 compilers's binding resolver which takes all Modules and attempts to resolve all bindings for each module"
readme = "README.md"

repository = "https://github.com/duplessisaurore/gluon3"
license = "AGPLv3"

keywords = ["languages", "scripting", "script"]

[dependencies]
hashbrown = { workspace = true }
gluon_debug = { workspace = true }
gluon_lexer = { workspace = true }
gluon_parser = { workspace = true }
gluon_module_resolver = { workspace = true }