[package]
name = "gluon_module_resolver"
version = "1.0.0"
edition = "2024"
authors = ["The Gluon3 Contributors"]

description = "The Gluon3 compilers's module resolver which takes a Module and attempts to resolve all linked modules"
readme = "README.md"

repository = "https://github.com/duplessisaurore/gluon3"
license = "AGPLv3"

keywords = ["languages", "scripting", "script"]

[dependencies]
hashbrown = { workspace = true }
gluon_debug = { workspace = true }
gluon_lexer = { workspace = true }
gluon_parser = { workspace = true }