[package]
name = "gluon_std"
version = "1.0.0"
edition = "2024"
authors = ["The Gluon3 Contributors"]

description = "The Gluon3 compiler binary for rust_std supported systems."
readme = "README.md"

repository = "https://github.com/duplessisaurore/gluon3"
license = "AGPLv3"

keywords = ["languages", "scripting", "script"]

[dependencies]
# For path expansion and things..
path-absolutize = { version = "3.1.1", features = ["once_cell_cache"] }
tilde-expand = "0.1.1"

gluon_lexer = { workspace = true }
gluon_debug = { workspace = true }
gluon_parser = { workspace = true }
gluon_module_resolver = { workspace = true }
gluon_bindings = { workspace = true }

# Argument parsing helper
clap = { version = "4.5", features = ["derive", "wrap_help"] }
